# PiSoundPlayer

./: .gitmodules  CMakeLists.txt
src/: OscReceiver.cpp  OscReceiver.hpp  main.cpp
